--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,7 +10,7 @@
 <body>
     <%- include('partials/header') %>
     <h1>Home Page</h1>
-    <h3>Hello <% data %></h3>
+    <h3>Hello World!!<% data %></h3>
     <%- include('partials/footer') %>
 </body>
 
