--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,12 +5,13 @@
 <head>
     <meta charset="utf-8">
     <title>ExpressJS TypeScript starter template</title>
+    <link rel="stylesheet" href="style/style.css" />
 </head>
 
 <body>
     <%- include('partials/header') %>
     <h1>Home Page</h1>
-    <h3>Hello World!!<% data %></h3>
+    <h3>Hello World!!! <%= data %></h3>
     <%- include('partials/footer') %>
 </body>
 
