--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,2 +1,4 @@
 <h4>Header</h4>
-<a href="/">Home</a> | <a href="/about">About</a>
+<div class="menu">
+    <a href="/">Home</a> | <a href="/about">About</a>
+</div>
